--- a/index.html
+++ b/index.html
@@ -212,7 +212,38 @@
     <!-- End of section 3 -->
     <section id="section4" class="section-4" >
         <footer class="footer" >
-
+            <div class="logo-container">
+                <div class="logo-play" >
+                        <img src="./assets/triangle.png" class="arrow-icon" />
+                </div>
+            </div>
+            <div class="foo-txt" >
+                <p class="p1"><b>DOWNLOAD APP</b></p>
+                <p>SHOW EVERYONE WHAT YOU CAN DO!</p>
+            </div>
+            <!--Store Buttons -->
+            <div id="buttons" class="buttons-container" >
+                <div id="btn-store" class="btn-store" >
+                    <img src="./assets/apple.png" class="btns-icon" />
+                    <span> DOWNLOAD ON
+                        <br>
+                        <b>THE APP STORE</b> 
+                    </span>
+                </div>
+                <div id="btn-store" class="btn-store" >
+                    <img src="./assets/play.png" class="btns-icon" />
+                    <span> GET IT ON
+                        <br>
+                        <b>GOOGLE PLAY</b> 
+                    </span>
+                </div>
+            </div>
+            <!--End of Store Buttons -->
+            <div class="media-icons" >
+                <img src="./assets/fb.png" class="btns-icon"/>
+                <img src="./assets/tw.png" class="btns-icon"/>
+                <img src="./assets/ig.png" class="btns-icon"/>
+            </div>
         </footer>
     </section>
     <script src="./js/swiper.min.js"></script>
