advance for tablet

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <img src="./assets/triangle.png" class="arrow-icon" />
                     <p>SURFACE</p>
                 </span>
-                <p></p>
+                <p class="p-header" >FOR ATHLETS AND COACHES</p>
             </div>
             <!-- End of Header -->
 
@@ -27,7 +27,7 @@
                 <h1 class="line2" >PLAY COLLEGE SPORTS</h1>
             </div>
             <!-- End of banner -->
-
+            
             <!--Store Buttons -->
             <div id="buttons" class="buttons-container" >
                 <div id="btn-store" class="btn-store" >
@@ -48,7 +48,7 @@
             <!--End of Store Buttons -->
 
             <!-- Sports List -->
-            <div id=sports-list class="sports-list">
+            <div id="sports-list" class="sports-list">
                 <ul class="sport1" >
                     <li>FOOTBALL</li>
                     <li>BASKETBALL</li>
@@ -246,6 +246,7 @@
             </div>
         </footer>
     </section>
+    <script src="./js/screenSize.js"></script>
     <script src="./js/swiper.min.js"></script>
     <script src="./js/newSwiper.js"></script>
 </body>
