--- a/index.html
+++ b/index.html
@@ -27,7 +27,15 @@
                 <h1 class="line2" >PLAY COLLEGE SPORTS</h1>
             </div>
             <!-- End of banner -->
-            
+            <div id="sports-list" class="sports-list">
+                <ul class="sport1" >
+                    <li>FOOTBALL</li>
+                    <li>BASKETBALL</li>
+                    <li>BASEBALL</li>
+                    <li>SOCCER</li>
+                    <li>ICE HOCKEY</li>
+                </ul>
+            </div>
             <!--Store Buttons -->
             <div id="buttons" class="buttons-container" >
                 <div id="btn-store" class="btn-store" >
@@ -48,7 +56,7 @@
             <!--End of Store Buttons -->
 
             <!-- Sports List -->
-            <div id="sports-list" class="sports-list">
+            <div id="sports-list-mobile" class="sports-list-mobile">
                 <ul class="sport1" >
                     <li>FOOTBALL</li>
                     <li>BASKETBALL</li>
