--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,  user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/swiper.min.css">
@@ -23,8 +23,8 @@
 
             <!-- Banner -->
             <div id="banner" class="banner-container" >
-                <h1 class="line1" >BE RECRUITED</h1>
-                <h1 class="line2" >PLAY COLLEGE SPORTS</h1>
+                <p class="line1" >BE RECRUITED</p>
+                <p class="line2" >PLAY COLLEGE SPORTS</p>
             </div>
             <!-- End of banner -->
             <div id="sports-list" class="sports-list">
